workspaces/optic-engine/src/learn_shape/snapshots/optic_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_object_with_optional_fields__nested_optional_results.snap
---
source: workspaces/optic-engine-native/src/learn_shape/result.rs
expression: "&nested_optional_results"
---
(
    Some(
        "test-id-15",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-8",
                    base_shape_id: "$boolean",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-9",
                    base_shape_id: "$string",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-11",
                    base_shape_id: "$object",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddField(
                AddField {
                    field_id: "test-id-10",
                    shape_id: "test-id-11",
                    name: "nested-field",
                    shape_descriptor: FieldShapeFromShape(
                        FieldShapeFromShape {
                            field_id: "test-id-10",
                            shape_id: "test-id-9",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-15",
                    base_shape_id: "$object",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-13",
                    base_shape_id: "$optional",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-13",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-11",
                                },
                            ),
                            consuming_parameter_id: "$optionalInner",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddField(
                AddField {
                    field_id: "test-id-12",
                    shape_id: "test-id-15",
                    name: "nested",
                    shape_descriptor: FieldShapeFromShape(
                        FieldShapeFromShape {
                            field_id: "test-id-12",
                            shape_id: "test-id-13",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddField(
                AddField {
                    field_id: "test-id-14",
                    shape_id: "test-id-15",
                    name: "other-field",
                    shape_descriptor: FieldShapeFromShape(
                        FieldShapeFromShape {
                            field_id: "test-id-14",
                            shape_id: "test-id-8",
                        },
                    ),
                },
            ),
        ),
    ],
)
